<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>ys-note-parent</groupId>
		<artifactId>ys-note-parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>

	<groupId>ys-note-parent</groupId>
	<artifactId>ys-note-web</artifactId>
	<packaging>war</packaging>
	<version>${ys-note-web.version}</version>
	<name>ys-note-web</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.7</jdk.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ys-note-parent</groupId>
			<artifactId>ys-note-service</artifactId>
			<version>${ys-note-service.version}</version>
		</dependency>
		<!--web -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${servlet.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>${jstl.version}</version>
		</dependency>
		<!-- shiro -->
		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-web</artifactId>
			<version>${shiro.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-spring</artifactId>
			<version>${shiro.version}</version>
		</dependency>
		<dependency>
			<groupId>com.github.liyiorg</groupId>
			<artifactId>weixin-popular</artifactId>
			<version>${weixin-popular.version}</version>
		</dependency>
	</dependencies>

	<!-- <profiles> -->
	<!-- <profile> -->
	<!-- <id>dev</id> -->
	<!-- <properties> -->
	<!-- <env>dev</env> -->
	<!-- </properties> -->
	<!-- <activation> -->
	<!-- <activeByDefault>true</activeByDefault> -->
	<!-- </activation> -->
	<!-- </profile> -->
	<!-- <profile> -->
	<!-- <id>test</id> -->
	<!-- <properties> -->
	<!-- <env>test</env> -->
	<!-- </properties> -->
	<!-- </profile> -->
	<!-- <profile> -->
	<!-- <id>prod</id> -->
	<!-- <properties> -->
	<!-- <env>prod</env> -->
	<!-- </properties> -->
	<!-- </profile> -->
	<!-- </profiles> -->

	<build>
		<finalName>ys-note-web</finalName>
		<!-- <filters> -->
		<!-- <filter>src/main/resources/profiles/${env}.properties</filter> -->
		<!-- </filters> -->
<!-- 		<resources> -->
<!-- 			<resource> -->
<!-- 				<directory>src/main/resources</directory> -->
<!-- 				<filtering>true</filtering> -->
<!-- 			</resource> -->
<!-- 		</resources> -->
		<plugins>
			<!-- eclipse插件, 设定wtp版本并添加springIDE nature -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <wtpversion>2.0</wtpversion>
                    <additionalProjectnatures>
                        <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
                    </additionalProjectnatures>
                </configuration>
            </plugin>
			<!-- compiler插件, 设定JDK版本 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${jdk.version}</source>
                    <target>${jdk.version}</target>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
			<!-- jetty插件 -->
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<!--<version>9.0.0.v20130308</version> -->
				<version>9.2.7.v20150116</version>
				<configuration>
					<scanIntervalSeconds>3</scanIntervalSeconds>
					<webApp>
						<contextPath>/</contextPath>
					</webApp>
					<httpConnector>
						<port>1111</port>
					</httpConnector>
					<reload>automatic</reload>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>
				<configuration>
					<port>8080</port>
					<path>/ys-note-web</path>
					<uriEncoding>UTF-8</uriEncoding>
					<finalName>ys-note-web</finalName>
					<systemProperties>
                        <JAVA_OPTS>-Xms1024m -Xmx2048m -XX:PermSize=512m -XX:MaxPermSize=2048m -Dfile.encoding=UTF-8</JAVA_OPTS>
                    </systemProperties>
					<server>tomcat7</server>
					<contextReloadable>false</contextReloadable>
				</configuration>
			</plugin>
			 <!-- resource插件 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <nonFilteredFileExtensions>
                        <!-- 过滤流程定义资源文件 -->
                        <nonFilteredFileExtension>zip</nonFilteredFileExtension>
                        <nonFilteredFileExtension>bar</nonFilteredFileExtension>
                        <nonFilteredFileExtension>png</nonFilteredFileExtension>
                        <nonFilteredFileExtension>bpmn</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
<!-- 			<plugin> -->
<!-- 				<groupId>org.apache.maven.plugins</groupId> -->
<!-- 				<artifactId>maven-surefire-plugin</artifactId> -->
<!-- 				<version>3.1</version> -->
<!-- 				<configuration> -->
<!-- 					<skipTests>true</skipTests> -->
<!-- 					<testFailureIgnore>true</testFailureIgnore> -->
<!-- 				</configuration> -->
<!-- 			</plugin> -->
<!-- 			<plugin> -->
<!-- 				<artifactId>maven-war-plugin</artifactId> -->
<!-- 				<configuration> -->
<!-- 					<attachClasses>true</attachClasses> -->
<!-- 				</configuration> -->
<!-- 			</plugin> -->
		</plugins>
	</build>
</project>
